update CorporateBrandingTest with KeyEvent